--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>aaas-api-common</module>
         <module>aaas-app-mysql</module>
         <module>aaas-app-mongo</module>
         <module>aaas-api-user-login</module>
