--- a/aaas-api-user-info/src/main/resources/application.yml
+++ b/aaas-api-user-info/src/main/resources/application.yml
@@ -26,7 +26,7 @@ datasource:
 #    url: jdbc:mysql://192.168.0.25:3306/websystique
 #    username: myuser
 #    password: mypassword
-    url: jdbc:mysql://192.168.0.8:3306/ssflogin
+    url: jdbc:mysql://192.168.0.8:3306/ssfuser
     username: sa
     password: abcd1234
 
