--- a/aaas-api-user-login/src/test/resources/application.yml
+++ b/aaas-api-user-login/src/test/resources/application.yml
@@ -1,26 +1,11 @@
----
+
 server:
   port: 8080
-  contextPath: /SpringBootCRUDApp
----
+  contextPath: /
+
+
 spring:
-  profiles: local, default
-datasource:
-  sampleapp:
-    url: jdbc:h2:~/test
-    username: SA
-    password:
-    driverClassName: org.h2.Driver
-    defaultSchema:
-    maxPoolSize: 10
-    hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.H2Dialect
----
-spring:
-  profiles: prod
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.0.8:3306/ssflogin
