--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -27,6 +27,7 @@
 		<junit.version>4.12</junit.version>
 		<mockito.version>1.9.5</mockito.version>
 		<assertj.version>3.3.0</assertj.version>
+
 	</properties>
 
 	<dependencies>
@@ -127,6 +128,14 @@
 			<version>4.3.4.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 	<build>
 		<plugins>
