add company info

--- a/aaas-api-user-info/src/main/resources/application.yml
+++ b/aaas-api-user-info/src/main/resources/application.yml
@@ -39,7 +39,7 @@ datasource:
 #    url: jdbc:mysql://192.168.0.25:3306/websystique
 #    username: myuser
 #    password: mypassword
-    url: jdbc:mysql://192.168.1.10:3306/ssfuser
+    url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=yes&amp;characterEncoding=UTF-8
     username: sa
     password: abcd1234
 
@@ -47,6 +47,9 @@ datasource:
     defaultSchema: ssfuser
     maxPoolSize: 20
     hibernate:
+      connection:
+        useUnicode: true
+        characterEncoding: UTF-8
       jdbc:
         batch_size: 50
       hbm2ddl.method: update
