--- a/aaas-api-finance/src/main/resources/application.yml
+++ b/aaas-api-finance/src/main/resources/application.yml
@@ -1,37 +1,17 @@
----
-server:
-  port: 8080
-  contextPath: /
----
 spring:
-  profiles: local, default
-datasource:
-  sampleapp:
-    url: jdbc:h2:~/test
-    username: SA
-    password:
-    driverClassName: org.h2.Driver
-    defaultSchema:
-    maxPoolSize: 10
-    hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.H2Dialect
----
-spring:
-  profiles: prod
-datasource:
-  sampleapp:
-    url: jdbc:mysql://192.168.0.25:3306/websystique
-    username: myuser
-    password: mypassword
-    driverClassName: com.mysql.jdbc.Driver
-    defaultSchema:
-    maxPoolSize: 20
-    hibernate:
-      hbm2ddl.method: update
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.MySQLDialect
+    devtools:
+        restart:
+            enabled: true
+        livereload:
+            enabled: false 
+            
+            application:
+        name: ssf-finance
+    profiles:
+        active: dev
+
+    jackson:
+      serialization:
+        fail-on-empty-beans: false
+
 
