--- a/aaas-api-finance/src/main/resources/application-dev.yml
+++ b/aaas-api-finance/src/main/resources/application-dev.yml
@@ -12,26 +12,26 @@ spring:
       serialization:
         fail-on-empty-beans: false
 
-    datasource:
-        url: jdbc:mysql://192.168.1.10/ssffinance?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false
-        name:
-        username: sa
-        password: abcd1234
-        maximum-pool-size: 2000
-        hikari:
-            data-source-properties:
-                cachePrepStmts: true
-                prepStmtCacheSize: 250
-                prepStmtCacheSqlLimit: 2048
-                useServerPrepStmts: true
-    jpa:
-        database-platform: org.hibernate.spatial.dialect.mysql.MySQLSpatialDialect
-        database: MYSQL
-        show_sql: true
-        properties:
-            hibernate.cache.use_second_level_cache: true
-            hibernate.cache.use_query_cache: false
-            hibernate.generate_statistics: true
+#    datasource:
+#        url: jdbc:mysql://192.168.1.10/ssffinance?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+#        name:
+#        username: sa
+#        password: abcd1234
+#        maximum-pool-size: 2000
+#        hikari:
+#            data-source-properties:
+#                cachePrepStmts: true
+#                prepStmtCacheSize: 250
+#                prepStmtCacheSqlLimit: 2048
+#                useServerPrepStmts: true
+#    jpa:
+#        database-platform: org.hibernate.spatial.dialect.mysql.MySQLSpatialDialect
+#        database: MYSQL
+#        show_sql: true
+#        properties:
+#            hibernate.cache.use_second_level_cache: true
+#            hibernate.cache.use_query_cache: false
+#            hibernate.generate_statistics: true
  #           hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     data:
         mongodb:
@@ -40,7 +40,7 @@ spring:
             database: test
 
 server:
-    port: 8088
+    port: 8090
     
     
 application:
