--- a/aaas-app-datacollection/src/main/resources/application.yml
+++ b/aaas-app-datacollection/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
             database: car_dealer
             host: 192.168.0.25
             port: 27017
+grpc:
+  host: localhost
+  port: 10030
