--- a/aaas-api-user-info/src/main/resources/application-prod.yml
+++ b/aaas-api-user-info/src/main/resources/application-prod.yml
@@ -41,7 +41,7 @@ datasource:
 #    password: mypassword
     url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
     username: sa
-    password: ssf@A320
+    password: 1qaz@WSX
 
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema: ssfuser
