--- a/aaas-api-user-login/src/main/resources/application.yml
+++ b/aaas-api-user-login/src/main/resources/application.yml
@@ -20,7 +20,7 @@ datasource:
       dialect: org.hibernate.dialect.H2Dialect
 ---
 spring:
-  profiles: prod
+  profiles: test
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
