--- a/aaas-api-user-login/src/main/resources/application-test.yml
+++ b/aaas-api-user-login/src/main/resources/application-test.yml
@@ -23,7 +23,7 @@ spring:
   profiles: test
 datasource:
   sampleapp:
-    url: jdbc:mysql://192.168.1.10:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
     username: sa
     password: 1qaz@WSX
     driverClassName: com.mysql.jdbc.Driver
