update log config

--- a/aaas-api-gateway/src/main/resources/logback.properties
+++ b/aaas-api-gateway/src/main/resources/logback.properties
@@ -3,7 +3,7 @@
 
 context.name=aaas-api-gateway
 
-log.dir=/logs/aaas-api-gateway
+log.dir=./logs/aaas-api-gateway
 
 rolling.policy.file.name.pattern=yyyy-MM-dd HH
 max.file.size=100MB
