--- a/aaas-api-gateway/pom.xml
+++ b/aaas-api-gateway/pom.xml
@@ -27,11 +27,11 @@
 
 	<dependencies>
 		<!--<dependency>-->
-			<!--<groupId>com.shellshellfish</groupId>-->
-			<!--<artifactId>com.shellshellfish.bankaccount.grpc.api</artifactId>-->
-			<!--<version>0.0.1-SNAPSHOT</version>-->
+		<!--<groupId>com.shellshellfish</groupId>-->
+		<!--<artifactId>com.shellshellfish.bankaccount.grpc.api</artifactId>-->
+		<!--<version>0.0.1-SNAPSHOT</version>-->
 		<!--</dependency>-->
-		
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
@@ -59,6 +59,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
 		</dependency>
 	</dependencies>
 
