--- a/aaas-app-datacollection-client/pom.xml
+++ b/aaas-app-datacollection-client/pom.xml
@@ -32,11 +32,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>grpc-spring-boot-starter</artifactId>-->
-		<!--</dependency>-->
-
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>1.3.0-RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -68,11 +68,7 @@
 			<artifactId>proto-google-common-protos</artifactId>
 			<version>0.1.9</version>
 		</dependency>
-		<dependency>
-			<groupId>org.lognet</groupId>
-			<artifactId>grpc-spring-boot-starter</artifactId>
-			<version>2.1.5</version>
-		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
