--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -62,6 +62,13 @@
 	        <artifactId>h2</artifactId>
         	<version>1.3.156</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
