--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -68,8 +68,13 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 		</dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	
 	<build>
 		<plugins>
