--- a/aaas-api-finance/src/main/resources/application-dev.yml
+++ b/aaas-api-finance/src/main/resources/application-dev.yml
@@ -37,7 +37,7 @@ spring:
         mongodb:
             host: 192.168.1.10
             port: 27017
-            database: funds
+            database: zhongzheng
 
 server:
     port: 10022
