--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -14,12 +14,20 @@ spring:
     host: 192.168.1.22
     port: 5672
     virtual-host: aaas
-    topicQueueName: com.ssf.topic.queue
+    topicQueuePayName: com.ssf.topic.queue.pay
+    topicQueueOrderName: com.ssf.topic.queue.order
     topicExchangeName: com.ssf.topic.exchange
-
+    topicPay: shellshellfish.pay
+    topicOrder: shellshellfish.order
 
 datasource:
   sampleapp:
+    url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
+    username: sa
+    password: 1qaz@WSX
+    driverClassName: com.mysql.jdbc.Driver
+    defaultSchema: ssftrdorder
+    maxPoolSize: 20
     hibernate:
       connection:
         useUnicode: true
@@ -30,6 +38,8 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
+      id.new_generator_mappings: false
+
 
 grpc:
   finance_prod_client:
