--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -14,8 +14,11 @@ spring:
     host: 192.168.1.22
     port: 5672
     virtual-host: aaas
-    topicQueueName: com.ssf.topic.queue
+    topicQueuePayName: com.ssf.topic.queue.pay
+    topicQueueOrderName: com.ssf.topic.queue.order
     topicExchangeName: com.ssf.topic.exchange
+    topicPay: shellshellfish.pay
+    topicOrder: shellshellfish.order
 
 datasource:
   sampleapp:
