--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>aaas-api-user-login</module>
         <module>aaas-api-user-info</module>
         <module>aaas-api-finance</module>
+        <module>aaas-finance-trade</module>
         <module>aaas-api-risk-assessment</module>
     </modules>
 
