--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -6,7 +6,6 @@ logging:
     org.hibernate.type.descriptor.sql: TRACE
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.data: debug
-    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
 spring:
   rabbitmq:
     username: ssf
@@ -37,11 +36,11 @@ datasource:
       hbm2ddl.method: update
       show_sql: true
       format_sql: true
-      dialect: org.hibernate.dialect.MySQLDialect
+      dialect: org.hibernate.dialect.MySQL57Dialect
       id.new_generator_mappings: false
 
 
 grpc:
   finance_prod_client:
     host: localhost
-    port: 10030
+    port: 10031
