--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -20,6 +20,13 @@ spring:
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
 
+    data:
+        mongodb:
+            host: 192.168.1.10
+            port: 27017
+            database: zhongzheng
+
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssftrdpay?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
