add grpc support in userinfo to order

--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -52,3 +52,7 @@ datasource:
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
 
+grpc:
+  userinfo:
+    host: localhost
+    port: 10041
