--- a/aaas-api-asset-allocation/src/test/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/test/resources/application-test.yml
@@ -40,9 +40,11 @@ spring:
             database: test
 
 server:
-    port: 10024
-    
-    
+    port: 10030
+
+grpc:
+  host: localhost
+  port: 10031
 application:
     swagger:
         title: SSF Platform API
