adjust zuul gateway config

--- a/aaas-api-gateway/src/main/resources/application.yml
+++ b/aaas-api-gateway/src/main/resources/application.yml
@@ -46,6 +46,7 @@ security:
       
 shellshellfish:
   ignoredWhitelist:
+    - /phoneapi-ssf/**
     - /api/userinfo/**
     - /api/useraccount/**
     - /api/riskassessments/**
